feat: update course class
